name:                X11-visualinfo
version:             0.1.0
synopsis:            Bindings for the Xlib VisualInfo functions

description:
  This package provides a collection of FFI definitions for obtaining
  information about X11 visuals from Xlib, including a @VisualInfo@
  type and bindings for @XGetVisualInfo()@ and @XMatchVisualInfo()@.
  These bindings are missing from the X11 package as of version 1.6.0.2.
  .
  See @man 3 XVisualInfo@ and
  <http://tronche.com/gui/x/xlib/utilities/visual.html> for details.

homepage:            https://github.com/anthonyde/X11-visualinfo
bug-reports:         https://github.com/anthonyde/X11-visualinfo/issues
license:             BSD3
license-file:        LICENSE
author:              Anthony DeRossi
maintainer:          Anthony DeRossi <ajderossi@gmail.com>
copyright:           Copyright (c) 2012 Anthony DeRossi
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC == 7.0.4

source-repository head
  type:                git
  location:            git://github.com/anthonyde/X11-visualinfo.git

source-repository this
  type:                git
  location:            git://github.com/anthonyde/X11-visualinfo.git
  tag:                 v0.1.0

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-tools:         hsc2hs

  other-extensions:
    ForeignFunctionInterface

  exposed-modules:
    Graphics.X11.Xlib.VisualInfo

  build-depends:
    X11                  >= 1.4 && < 1.7,
    base                 >= 4   && < 5

  extra-libraries:     "X11"
